<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.persistentbit</groupId>
    <artifactId>persistentbit</artifactId>
    <version>2.0-SNAPSHOT</version>
    <modules>
        <module>persistent-libs</module>
        <module>persistent-maven-plugins</module>
    </modules>
    <packaging>pom</packaging>

    <!-- *********************    GENERAL INFO  -->

    <name>persistentbit</name>
    <description>
        A Collection of Simple, general purpose java libraries and maven plugins.
    </description>

    <developers>
        <developer>
            <name>Peter Muys</name>
            <email>peter@petermuys.com</email>
            <organization>Muys Software</organization>
        </developer>
    </developers>
    <inceptionYear>2017</inceptionYear>




    <licenses>
        <license>
            <name>EPL</name>
            <url>http://opensource.org/licenses/eclipse-1.0.php</url>
        </license>
    </licenses>

    <url>https://github.com/persistentbit/persistentbit.git</url>


    <!-- *********************    SOURCE CONTROL  -->

    <scm>
        <connection>scm:git:git@github.com:persistentbit/persistentbit.git</connection>
        <url>scm:git:git@github.com:persistentbit/persistentbit.git</url>
        <developerConnection>scm:git:git@github.com:persistentbit/persistentbit.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <!-- *********************   PROPERTIES  -->

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- *********************    BUILD SETTINGS -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>1.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>[9.0,10.0)</version>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>

                    <release>9</release>
                    <!--  We need to put the source and target because intellij doesn't pick up the release config -->
                    <source>9</source>
                    <target>9</target>

                    <parameters>true</parameters>
                    <failOnWarning>true</failOnWarning>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.20.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
